WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67332
Fix compile issues when enabling HAVE(CFNETWORK_DATA_ARRAY_CALLBACK)
https://bugs.webkit.org/show_bug.cgi?id=67332
Summary
Fix compile issues when enabling HAVE(CFNETWORK_DATA_ARRAY_CALLBACK)
Pratik Solanki
Reported
2011-08-31 16:07:19 PDT
Recent changes (
r93811
and
r94093
) have broken compiles with HAVE(CFNETWORK_DATA_ARRAY_CALLBACK) enabled.
Attachments
Patch
(2.35 KB, patch)
2011-08-31 16:27 PDT
,
Pratik Solanki
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2011-08-31 16:27:07 PDT
Created
attachment 105854
[details]
Patch
Alexey Proskuryakov
Comment 2
2011-08-31 16:41:53 PDT
Comment on
attachment 105854
[details]
Patch r=me as a build fix, but I don't understand the second change. How can we use CFNETWORK_DATA_ARRAY_CALLBACK when we don't use CFNETWORK? Something seems wrong.
Pratik Solanki
Comment 3
2011-08-31 17:20:22 PDT
(In reply to
comment #2
)
> (From update of
attachment 105854
[details]
) > r=me as a build fix, but I don't understand the second change. How can we use CFNETWORK_DATA_ARRAY_CALLBACK when we don't use CFNETWORK? Something seems wrong.
CFNETWORK_DATA_ARRAY_CALLBACK can be used by the Foundation based loader as well. We have code for it in ResourceHandleMac.mm as well. Maybe we should change the name of the define to make it less confusing?
Pratik Solanki
Comment 4
2011-08-31 17:25:54 PDT
Committed
r94255
: <
http://trac.webkit.org/changeset/94255
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug