Fix compile issues when enabling HAVE(CFNETWORK_DATA_ARRAY_CALLBACK) https://bugs.webkit.org/show_bug.cgi?id=67332

Reviewed by Darin Adler.

* loader/mac/ResourceLoaderMac.mm:
(WebCore::ResourceLoader::didReceiveDataArray):
* platform/network/cf/ResourceHandleCFNet.cpp:

Canonical link: https://commits.webkit.org/83167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94255 268f45cc-cd09-0410-ab3c-d52691b4dbfc