Source/WebCore/loader/mac/ResourceLoaderMac.mm
@@ -81,7 +81,7 @@ void ResourceLoader::didReceiveDataArray(CFArrayRef dataArray)
         CFDataRef data = static_cast<CFDataRef>(CFArrayGetValueAtIndex(dataArray, i));
         int dataLen = static_cast<int>(CFDataGetLength(data));
 
-        if (m_shouldBufferData) {
+        if (m_options.shouldBufferData == BufferData) {
             if (!m_resourceData)
                 m_resourceData = SharedBuffer::create();
             m_resourceData->append(data);
